# nrspath_ws

./: .gitignore  LICENSE  README.md
src/: generate_offset_waypoints.py  generate_offset_waypoints_new.py
src/cross_corner_waypoints/: 1.txt  2.txt  3.txt  4.txt  local_frame_info.txt  region_report.csv
src/nrs_path2/: CMakeLists.txt  README.md  package.xml
src/nrs_path2/config/: fake_controllers.yaml
src/nrs_path2/data/: 2_convex_surface_waypoints.txt  3.1_concave_surface_waypoints.txt  3.2_concave_surface_waypoints.txt  4_complex_surface_waypoints.txt  Ori_path_transformed.txt  constant.txt  final_waypoints_RPY.txt  flat_surface_waypoints.txt  geodesic_waypoints.txt  geodesic_waypoints_straight_ccv .txt  geodesic_waypoints_straight_cpx.txt  geodesic_waypoints_straight_cvx.txt  geodesic_waypoints_straight_flt.txt  plot_urp.py  plot_xyz.py  urp_waypoints.txt  visual_final_waypoints.txt
src/nrs_path2/include/: nrs_simulation.h
src/nrs_path2/launch/: path_planning.launch.py  view_ur10e.launch.py
src/nrs_path2/mesh/: AFT200_D80_C.stl  FT_connector.stl  UR10_flange_connector.stl  complex_surface.stl  complex_surface.usd  complex_surface_1.stl  complex_surface_1.usd  complex_surface_2.stl  concave_surface_0.usd  concave_surface_1.stl  concave_surface_1.usd  concave_surface_2.stl  concave_surface_2.usd  convex_surface_2.stl  convex_surface_2.usd  flat_surface_5.stl  flat_surface_5.usd  testbed.stl  testbed.usd  workpiece.stl  workpiece.usd
src/nrs_path2/mesh/compound_surface/: _comp_concave_0_75_v0_42.stl  _comp_concave_0_75_v0_42.usd  _comp_convex_0_75_v0_42.stl  _comp_convex_0_75_v0_42.usd  _comp_flat_0_75_v0_42.stl  _comp_flat_0_75_v0_42.usd
src/nrs_path2/msg/: Waypoint.msg
src/nrs_path2/src/: nrs_callback.cpp  nrs_callback.h  nrs_geodesic.cpp  nrs_geodesic.h  nrs_interpolation.cpp  nrs_interpolation.h  nrs_io.cpp  nrs_io.h  nrs_math.cpp  nrs_math.h  nrs_node_path_generation.cpp  nrs_node_visualization.cpp  nrs_vec3d.cpp  nrs_vec3d.h  nrs_visualization.cpp  nrs_visualization.h  path_projection.cpp  path_projection.h  path_projection_wo_interp.cpp  yonoo.cpp
src/nrs_path2/urdf/: aidin_m1.urdf  basic_box.urdf  testbed.xacro  ur.xacro  ur10e.xacro
src/nrs_path2/urdf/inc/: ur10e_macro.xacro  ur_macro.xacro
src/nrs_waypoint/: CMakeLists.txt  package.xml
src/nrs_waypoint/src/: clicked_point_publisher.cpp  clicked_point_region_publisher.cpp
src/nrs_waypoint_generator/: package.xml  setup.cfg  setup.py
src/nrs_waypoint_generator/nrs_waypoint_generator/: waypoint_core.py  waypoint_generation.py
src/polishing_removal/: README.md  package.xml  setup.cfg  setup.py
src/polishing_removal/data/session_20260404_201032/: recording_pose_force.txt  recording_velocity.txt  removal_map.npz  summary.txt
src/polishing_removal/launch/: polishing_removal.launch.py
src/polishing_removal/polishing_removal/: polishing_removal_node.py  polishing_removal_visualization.py
