<?xml version="1.0"?>
<package format="3">
  <name>nrs_waypoint_generator</name>
  <version>0.0.0</version>
  <description>Generate offset waypoints from mesh and publish selected region to /clicked_point</description>

  <maintainer email="eunseop@example.com">eunseop</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>